--- a/templates/blog/comment_edit.html
+++ b/templates/blog/comment_edit.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block title %}{{ title|default:"댓글 수정" }}{% endblock %}
 
@@ -10,7 +11,7 @@
     {% csrf_token %}
     <div class="mb-3">
       {{ form.content.label_tag }}
-      {{ form.content }}
+      {{ form.content|add_class:"form-control" }}
     </div>
     
     <button type="submit" class="btn btn-primary">수정 완료</button>
