--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -8,7 +8,12 @@
   <img src="{{ post.image.url }}" alt="post image" class="img-fluid my-3">
 {% endif %}
 
-<p><strong>작성자:</strong> {{ post.author }}</p>
+<p>
+  <strong>작성자:</strong>
+  <a href="{% url 'account:public_profile' username=post.author.username %}">
+    {{ post.author.username }}
+  </a>
+</p>
 <p><strong>작성일:</strong> {{ post.created_at|date:"Y년 m월 d일 H:i" }}</p>
 <p><strong>조회수:</strong> {{ post.views }}</p>
 
@@ -63,7 +68,12 @@
   {% for comment in comments %}
     <li class="list-group-item">
       <div>
-        <strong>{{ comment.writer }}</strong>
+        <!-- ✅ 댓글 작성자 링크 -->
+        <strong>
+          <a href="{% url 'account:public_profile' username=comment.writer.username %}">
+            {{ comment.writer.username }}
+          </a>
+        </strong>
         <span class="text-muted small">- {{ comment.created_at|date:"Y.m.d H:i" }}</span><br>
         {{ comment.content }}
       </div>
